# BSN

./: .gitignore  README.md  exe.sh  makefile  script.sh  time_analysis.txt
bodyhub/src/: BodyHubModule.cpp
docs/: Doxyfile  act-gm-simple.txt  dep-gm-complete.txt  dep-gm-simple.txt  goal-model.txt
libbsn/cmake.Modules/: CompileFlags.cmake
libbsn/include/bsn/entity/: BodyHub.hpp  SensorNode.hpp
libbsn/include/bsn/receiver/: data_receiver.hpp
libbsn/include/bsn/sender/: data_sender.hpp
libbsn/include/data/: BatteryLevel.h  SensorData.h
libbsn/include/processor/: Processor.hpp
libbsn/src/communication/: TCPReceive.cpp
libbsn/src/data/: BatteryLevel.cpp  SensorData.cpp
libbsn/src/entity/: BodyHub.cpp  SensorNode.cpp
libbsn/src/persistence/: PersistenceModule.cpp
libbsn/src/processor/: Processor.cpp
libbsn/src/receiver/: data_receiver.cpp
libbsn/src/sender/: data_sender.cpp
libbsn/src/sockets/: sockets.cpp
libbsn/src/statistics/: VitalStatistics.cpp
libbsn/test/: CMakeLists.txt  a.txt  test_processor.h  test_vitalstatistics.hpp
module/: CMakeLists.txt
module/bodyhub/include/: BodyHubModule.hpp
module/bodyhub/src/: BodyHubModule.cpp
module/sensornode/apps/: sensornode.cpp
module/sensornode/include/: SensorNodeModule.h  SensorNodeModule.hpp
module/sensornode/src/: SensorNodeModule.cpp
module/test/: CMakeLists.txt  test_bodyhubModule.hpp
odv/centralhub/listener/src/: Listener.cpp
odv/centralhub/processor/include/: DataProcessor.hpp
odv/centralhub/processor/src/: DataProcessor.cpp
odv/monitor/resource/include/: ResourceMonitor.hpp
odv/monitor/resource/src/: ResourceMonitor.cpp
odv/sensornode/collector/include/: DataCollectorModule.hpp
odv/sensornode/collector/src/: DataCollectorModule.cpp
odv/sensornode/configs/ecg/: configuration
odv/sensornode/configs/oximeter/: configuration
odv/sensornode/configs/sphygmomanometer/: configuration
odv/sensornode/configs/thermometer/: configuration
odv/sensornode/sender/include/: DataSender.hpp
odv/sensornode/sender/src/: DataSender.cpp
sensornode/include/: SensorNodeModule.h
sensornode/src/: SensorNodeModule.cpp
server/: bsn_server.py  t.py  viewer.py
simulation/sensor/: sensor.cpp
test/: main  test_bodyhub.hpp  test_bodyhubModule.hpp  test_sensorNode.hpp
test/cmake.Modules/: CompileFlags.cmake
